[gd_scene load_steps=5 format=3 uid="uid://5nt7ijxt1hpp"]

[ext_resource type="Script" uid="uid://coo4afr0mr8pn" path="res://Scripts/ControlUI_1.gd" id="1_vxusa"]
[ext_resource type="FontFile" uid="uid://bj0tlnd3nxv37" path="res://Tipografias/Roboto-ExtraLight.ttf" id="2_4btcy"]
[ext_resource type="FontFile" uid="uid://c03476mq184q4" path="res://Tipografias/Roboto-Light.ttf" id="3_6kfvl"]

[sub_resource type="LabelSettings" id="LabelSettings_gpdgt"]
font_size = 13

[node name="Ui1" type="CanvasLayer"]
script = ExtResource("1_vxusa")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 200.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 200.0

[node name="NextEscene" type="Button" parent="Control/Panel"]
layout_mode = 0
offset_left = 83.0
offset_top = 155.0
offset_right = 221.0
offset_bottom = 186.0
text = "Siguiente Escena"

[node name="NextEscene2" type="Button" parent="Control/Panel"]
layout_mode = 0
offset_left = 79.0
offset_top = 113.0
offset_right = 224.0
offset_bottom = 144.0
theme_override_fonts/font = ExtResource("2_4btcy")
theme_override_font_sizes/font_size = 14
text = "Desaaprece Input"

[node name="Label" type="Label" parent="Control/Panel"]
layout_mode = 0
offset_left = 74.0
offset_top = 21.0
offset_right = 226.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("3_6kfvl")
text = "Escena 1"
label_settings = SubResource("LabelSettings_gpdgt")
horizontal_alignment = 1

[node name="TextEdit" type="TextEdit" parent="Control/Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 60.0
offset_right = 274.0
offset_bottom = 94.0
placeholder_text = "Input Text"
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false

[connection signal="pressed" from="Control/Panel/NextEscene" to="." method="_on_next_escene_pressed"]
[connection signal="pressed" from="Control/Panel/NextEscene2" to="." method="_on_next_escene_2_pressed"]
[connection signal="focus_entered" from="Control/Panel/TextEdit" to="." method="_on_text_edit_focus_entered"]
[connection signal="focus_exited" from="Control/Panel/TextEdit" to="." method="_on_text_edit_focus_exited"]
